feat: 支持多宠物选择与切换