@@ -6,9 +6,12 @@ import lombok.SneakyThrows;
 import org.noear.snack4.ONode;
 import org.noear.solon.annotation.*;
 import org.noear.solon.core.handle.Context;
+import site.sorghum.agent4j.bin.config.ConfigService;
 import site.sorghum.agent4j.web.model.ApiResponse;
 
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -16,65 +19,238 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 
 /**
- * 桌面宠物 API — 提供 pet.json 元数据与 spritesheet.webp 文件。
+ * 桌面宠物 API — 支持多宠物选择。
  * <p>
- * 宠物文件位于 {@code ~/.agent4j/pet/} 目录。
+ * 宠物文件位于 {@code ~/.codex/pets/} 目录，每个子文件夹代表一个宠物，
+ * 内含 pet.json（元数据）和 spritesheet.webp（精灵图）。
+ * 当前活跃宠物名称写入 config.json 的 activePet 字段。
+ * </p>
+ *
+ * @author Sorghum
  */
 @Api(tags = "宠物")
 @Controller
-@Mapping("/api/pet")
+@Mapping("/api/pets")
 public class PetController {
 
-    private static final Path PET_DIR =
+    private static final Path PETS_DIR =
+            Paths.get(System.getProperty("user.home"), ".codex", "pets");
+
+    private static final Path POSITION_DIR =
             Paths.get(System.getProperty("user.home"), ".agent4j", "pet");
 
-    @ApiOperation(value = "获取宠物元数据", notes = "返回 pet.json 的内容")
+    private static final Path POSITION_FILE = POSITION_DIR.resolve("position.json");
+
+    @Inject
+    private ConfigService configService;
+
+    // ──────────────────── 列出所有可用宠物 ────────────────────
+
+    @ApiOperation(value = "列出所有可用宠物", notes = "扫描 ~/.codex/pets/ 子文件夹，返回每个宠物的元数据摘要")
     @Get
-    @Mapping("/info")
+    @Mapping("")
     @SneakyThrows
-    public ApiResponse<?> info() {
-        Path petJson = PET_DIR.resolve("pet.json");
-        if (!Files.exists(petJson)) {
-            return ApiResponse.ok("{}");
+    public ApiResponse<List<Map<String, Object>>> listPets() {
+        if (!Files.isDirectory(PETS_DIR)) {
+            return ApiResponse.ok(Collections.emptyList());
         }
-        return ApiResponse.ok(ONode.ofJson(Files.readString(petJson, StandardCharsets.UTF_8)));
+
+        List<Map<String, Object>> pets;
+        try (Stream<Path> dirs = Files.list(PETS_DIR)) {
+            pets = dirs
+                    .filter(Files::isDirectory)
+                    .map(dir -> {
+                        Map<String, Object> info = new LinkedHashMap<>();
+                        String name = dir.getFileName().toString();
+                        info.put("name", name);
+                        info.put("dirName", name);
+
+                        Path meta = dir.resolve("pet.json");
+                        if (Files.exists(meta)) {
+                            try {
+                                ONode metaNode = ONode.ofJson(Files.readString(meta, StandardCharsets.UTF_8));
+                                info.put("displayName", metaNode.get("name") != null
+                                        ? metaNode.get("name").getString() : name);
+                                info.put("description", metaNode.get("description") != null
+                                        ? metaNode.get("description").getString() : "");
+                                if (metaNode.get("author") != null) {
+                                    info.put("author", metaNode.get("author").getString());
+                                }
+                            } catch (Exception ignored) {
+                                info.put("displayName", name);
+                                info.put("description", "");
+                            }
+                        } else {
+                            info.put("displayName", name);
+                            info.put("description", "");
+                        }
+
+                        Path sheet = dir.resolve("spritesheet.webp");
+                        info.put("hasSpritesheet", Files.exists(sheet));
+                        info.put("spritesheetUrl", "/api/pets/" + name + "/spritesheet");
+
+                        return info;
+                    })
+                    .collect(Collectors.toList());
+        }
+        return ApiResponse.ok(pets);
     }
 
-    @ApiOperation(value = "保存宠物位置", notes = "将拖动位置写入 pet.json")
+    // ──────────────────── 获取指定宠物元数据 ────────────────────
+
+    @ApiOperation(value = "获取指定宠物元数据", notes = "返回宠物目录下 pet.json 的内容")
+    @Get
+    @Mapping("/{name}")
+    @SneakyThrows
+    public ApiResponse<?> getPetInfo(@Param("name") String name) {
+        Path petDir = PETS_DIR.resolve(name);
+        if (!Files.isDirectory(petDir)) {
+            return ApiResponse.fail("宠物不存在: " + name);
+        }
+        Path meta = petDir.resolve("pet.json");
+        if (!Files.exists(meta)) {
+            return ApiResponse.ok("{}");
+        }
+        ONode root = ONode.ofJson(Files.readString(meta, StandardCharsets.UTF_8));
+        root.set("dirName", name);
+        return ApiResponse.ok(root);
+    }
+
+    // ──────────────────── 获取宠物精灵图 ────────────────────
+
+    @ApiOperation(value = "获取宠物 spritesheet", notes = "返回 spritesheet.webp 文件字节")
+    @Get
+    @Mapping("/{name}/spritesheet")
+    @SneakyThrows
+    public void getSpritesheet(@Param("name") String name) {
+        Context current = Context.current();
+        Path petDir = PETS_DIR.resolve(name);
+        if (!Files.isDirectory(petDir)) {
+            current.status(404);
+            return;
+        }
+        Path sheet = petDir.resolve("spritesheet.webp");
+        if (!Files.exists(sheet)) {
+            current.status(404);
+            return;
+        }
+        current.headerSet("Content-Type", "image/webp");
+        current.headerSet("Cache-Control", "no-cache");
+        current.output(Files.readAllBytes(sheet));
+    }
+
+    // ──────────────────── 获取/设置活跃宠物 ────────────────────
+
+    @ApiOperation(value = "获取当前活跃宠物", notes = "返回 config.json 中 activePet 指定的宠物信息，含位置/大小")
+    @Get
+    @Mapping("/active")
+    @SneakyThrows
+    public ApiResponse<?> getActivePet() {
+        String activeName = configService.getConfig().activePet();
+        if (activeName == null || activeName.isEmpty()) {
+            return ApiResponse.ok(Collections.singletonMap("active", false));
+        }
+
+        Path petDir = PETS_DIR.resolve(activeName);
+        if (!Files.isDirectory(petDir)) {
+            return ApiResponse.ok(Collections.singletonMap("active", false));
+        }
+
+        Map<String, Object> result = new LinkedHashMap<>();
+        result.put("active", true);
+        result.put("name", activeName);
+
+        Path meta = petDir.resolve("pet.json");
+        if (Files.exists(meta)) {
+            try {
+                ONode metaNode = ONode.ofJson(Files.readString(meta, StandardCharsets.UTF_8));
+                result.put("displayName", metaNode.get("name") != null
+                        ? metaNode.get("name").getString() : activeName);
+                result.put("description", metaNode.get("description") != null
+                        ? metaNode.get("description").getString() : "");
+            } catch (Exception ignored) {
+                result.put("displayName", activeName);
+            }
+        } else {
+            result.put("displayName", activeName);
+        }
+
+        result.put("position", readPetPosition());
+        result.put("sizeIndex", readPetSizeIndex());
+        result.put("spritesheetUrl", "/api/pets/" + activeName + "/spritesheet");
+
+        return ApiResponse.ok(result);
+    }
+
+    @ApiOperation(value = "设置活跃宠物", notes = "将宠物名称写入 config.json 的 activePet 字段")
+    @Put
+    @Mapping("/active")
+    @SneakyThrows
+    public ApiResponse<String> setActivePet(@Body Map<String, Object> body) {
+        Object nameObj = body.get("name");
+        if (nameObj == null || nameObj.toString().isEmpty()) {
+            return ApiResponse.fail("宠物名称不能为空");
+        }
+        String name = nameObj.toString();
+
+        Path petDir = PETS_DIR.resolve(name);
+        if (!Files.isDirectory(petDir)) {
+            return ApiResponse.fail("宠物不存在: " + name);
+        }
+
+        configService.updateConfig(Map.of("activePet", name));
+        return ApiResponse.ok("已切换到宠物: " + name);
+    }
+
+    // ──────────────────── 保存宠物位置/大小 ────────────────────
+
+    @ApiOperation(value = "保存宠物位置/大小", notes = "将拖动位置和大小写入位置存储")
     @Put
     @Mapping("/position")
     @SneakyThrows
     public ApiResponse<?> savePosition(@Body Map<String, Object> pos) {
-        Path petJson = PET_DIR.resolve("pet.json");
-        ONode root = Files.exists(petJson)
-                ? ONode.ofJson(Files.readString(petJson, StandardCharsets.UTF_8))
-                : ONode.ofJson("{}").asObject();
-        // 合并写入：x/y 归入 position 子对象，其余写入根
-        if (pos.containsKey("x") || pos.containsKey("y")) {
-            ONode positionNode = root.get("position") != null
-                    ? root.get("position") : ONode.ofJson("{}").asObject();
-            if (pos.containsKey("x")) positionNode.set("x", pos.get("x"));
-            if (pos.containsKey("y")) positionNode.set("y", pos.get("y"));
-            root.set("position", positionNode);
-        }
-        if (pos.containsKey("sizeIndex")) {
-            root.set("sizeIndex", pos.get("sizeIndex"));
-        }
-        Files.writeString(petJson, root.toJson(), StandardCharsets.UTF_8);
-        return ApiResponse.ok(root);
+        savePetPosition(pos);
+        return ApiResponse.ok("位置已保存");
     }
 
-    @ApiOperation(value = "获取宠物精灵图", notes = "返回 spritesheet.webp 文件字节")
-    @Get
-    @Mapping("/spritesheet")
+    // ──────────────────── 内部：全局位置存储 (~/.agent4j/pet/position.json) ────────────────────
+
+    private Map<String, Object> readPetPosition() {
+        Map<String, Object> pos = new LinkedHashMap<>();
+        pos.put("x", 0);
+        pos.put("y", 0);
+        try {
+            if (Files.exists(POSITION_FILE)) {
+                ONode node = ONode.ofJson(Files.readString(POSITION_FILE, StandardCharsets.UTF_8));
+                if (node.get("x") != null) pos.put("x", node.get("x").getInt());
+                if (node.get("y") != null) pos.put("y", node.get("y").getInt());
+            }
+        } catch (Exception ignored) {}
+        return pos;
+    }
+
+    private int readPetSizeIndex() {
+        try {
+            if (Files.exists(POSITION_FILE)) {
+                ONode node = ONode.ofJson(Files.readString(POSITION_FILE, StandardCharsets.UTF_8));
+                if (node.get("sizeIndex") != null) return node.get("sizeIndex").getInt();
+            }
+        } catch (Exception ignored) {}
+        return 1;
+    }
+
     @SneakyThrows
-    public void spritesheet() {
-        Context current = Context.current();
-        Path sheet = PET_DIR.resolve("spritesheet.webp");
-        if (!Files.exists(sheet)) {
-            return;
+    private void savePetPosition(Map<String, Object> pos) {
+        Files.createDirectories(POSITION_DIR);
+        ONode root;
+        if (Files.exists(POSITION_FILE)) {
+            root = ONode.ofJson(Files.readString(POSITION_FILE, StandardCharsets.UTF_8));
+        } else {
+            root = ONode.ofJson("{}").asObject();
         }
-        current.headerSet("Content-Type", "image/webp");
-        current.output(Files.readAllBytes(sheet));
+        if (pos.containsKey("x")) root.set("x", pos.get("x"));
+        if (pos.containsKey("y")) root.set("y", pos.get("y"));
+        if (pos.containsKey("sizeIndex")) root.set("sizeIndex", pos.get("sizeIndex"));
+        Files.writeString(POSITION_FILE, root.toJson(), StandardCharsets.UTF_8);
     }
 }
